Fixes to the prototype makefile so that it can build the smallmatrixc module to run under OpenBLAS in the Anaconda environment.  The default behavior remains to use the Atlas lapack/blas for the non-Anaconda case.

--- a/math/plasticity/proto/Makefile
+++ b/math/plasticity/proto/Makefile
@@ -1,8 +1,12 @@
 all: smallmatrixc.so
 .PHONY: all
 
-smallmatrixc.so: smallmatrix.o smallmatrixcmodule.o
+smallmatrixc.so: smallmatrix.o smallmatrixcmodule.o 
+ifdef ANACONDA_LIBS
+	g++ smallmatrixcmodule.o smallmatrix.o -L$(ANACONDA_LIBS) -lopenblas -shared -o smallmatrixc.so
+else
 	g++ smallmatrixcmodule.o smallmatrix.o -llapack -lblas -shared -o smallmatrixc.so
+endif
 
 SWIGEXEC=/usr/local/bin/swig
 SWIGLIB=/usr/local/lib/swig_lib 
