--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,21 @@
-builddir-*/
-OOFSWIG/
-SRC/SWIG2D/
 *.pyc
+*.o
+*.pyo
+\#*\#
+SRC/SWIG2D/*
+build/
+builddir-*
+OOFSWIG/Makefile
+OOFSWIG/*/Makefile
+OOFSWIG/Makefile.template
+OOFSWIG/config.log
+OOFSWIG/config.status
+OOFSWIG/swig_lib/python/Makefile
+OOFSWIG/libswig.a
+OOFSWIG/swig.x
+OOFSWIG/SWIG/parser.cxx
+OOFSWIG/SWIG/parser.h
+OOFSWIG/SWIG/y.tab.c
+OOFSWIG/SWIG/y.tab.h
+OOFSWIG/Tests/*
+SCRATCH/*
