Revert "Deleted more unused code."
This reverts commit d42db0d52cef8bea039100f65e786610a3cae27d.

--- a/OOFSWIG/Makefile.in
+++ b/OOFSWIG/Makefile.in
@@ -67,7 +67,7 @@ WITH=
 #
 # Rules for creation of a .o file from .cxx
 
-all:		swig.x 
+all:		swig.x #doc ##Not to build documentation 
 		@echo "Compilation complete."
 		@echo "Type 'make runtime' to build run-time libraries."
 		@echo "Type 'make install' to install."	
