--- a/SRC/engine/property/forcedensity/CMakeLists.txt
+++ b/SRC/engine/property/forcedensity/CMakeLists.txt
@@ -10,7 +10,7 @@ add_subdirectory(nonlinear)
 add_subdirectory(nonconstant)
 
 target_sources(oof2engine
-  PUBLIC
+  PRIVATE
   forcedensity.C
   forcedensity.h
   )
