--- a/SRC/engine/property/heatconductivity/nonlinear/CMakeLists.txt
+++ b/SRC/engine/property/heatconductivity/nonlinear/CMakeLists.txt
@@ -7,7 +7,7 @@
 # oof_manager@nist.gov. 
 
 target_sources(oof2engine
-  PUBLIC
+  PRIVATE
   nonlinear_heat_conductivity.C
   nonlinear_heat_conductivity.h
   )
