--- a/SRC/engine/CMakeLists.txt
+++ b/SRC/engine/CMakeLists.txt
@@ -1,9 +1,17 @@
+# This software was produced by NIST, an agency of the U.S. government,
+# and by statute is not subject to copyright in the United States.
+# Recipients of this software assume all responsibilities associated
+# with its operation, modification and maintenance. However, to
+# facilitate maintenance we ask that before distributing modifed
+# versions of this software, you first contact the authors at
+# oof_manager@nist.gov. add_subdirectory(GUI)
+
 add_subdirectory(IO)
 add_subdirectory(property)
 add_subdirectory(elements)
 
 target_sources(oof2engine
-  PUBLIC
+  PRIVATE
   angle2color.C
   bdyanalysis.C
   boundarycond.C
