--- a/SRC/engine/IO/CMakeLists.txt
+++ b/SRC/engine/IO/CMakeLists.txt
@@ -1,7 +1,13 @@
-add_subdirectory(GUI)
+# This software was produced by NIST, an agency of the U.S. government,
+# and by statute is not subject to copyright in the United States.
+# Recipients of this software assume all responsibilities associated
+# with its operation, modification and maintenance. However, to
+# facilitate maintenance we ask that before distributing modifed
+# versions of this software, you first contact the authors at
+# oof_manager@nist.gov. add_subdirectory(GUI)
 
 target_sources(oof2engine
-  PUBLIC
+  PRIVATE
   contour.C
   contour.h
   propertyoutput.C
