--- a/SRC/engine/property/forcedensity/nonconstant/CMakeLists.txt
+++ b/SRC/engine/property/forcedensity/nonconstant/CMakeLists.txt
@@ -7,7 +7,7 @@
 # oof_manager@nist.gov. 
 
 target_sources(oof2engine
-  PUBLIC
+  PRIVATE
   nonconstant_force_density.C
   nonconstant_force_density.h
   )
