--- a/SRC/engine/property/skeletonrelaxationrate/CMakeLists.txt
+++ b/SRC/engine/property/skeletonrelaxationrate/CMakeLists.txt
@@ -7,7 +7,7 @@
 # oof_manager@nist.gov. 
 
 target_sources(oof2engine
-  PUBLIC
+  PRIVATE
   skeletonrelaxationrate.C
   skeletonrelaxationrate.h
   )
