More progress on converting to cmake.
This is still the python2 version!

This version doesn't do swig, since there's probably no point in
figuring out how to use swig1.1 with cmake, if we're goign to try
to use a more modern swig or swig replacement.

This version will build, on the mac at least.  But because it doesn't
do swig, you first have to build the old distutils version to create
the swig output files.

The regression tests work.
The GUI tests work except for the error handling ones.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,44 @@
 # versions of this software, you first contact the authors at
 # oof_manager@nist.gov.
 
-cmake_minimum_required(VERSION 3.20)
+cmake_minimum_required(VERSION 3.16)
 project(oof2 VERSION 2.2.3)
+
+#=--=##=--=##=--=##=--=##=--=##=--=##=--=##=--=##=--=##=--=##=--=##=--=#
+
+# OOF2/SRC subdirectories containing python files to install.  The
+# entire hierarchies under these will be installed in
+# .../site-packages/oof2/ooflib.
+
+set(oofdirs
+  common
+  engine
+  image
+  orientationmap
+  tutorials
+  EXTENSIONS
+  )
+
+# OOF2 libraries to build
+
+set(ooflibs
+  oof2common
+  oof2commonGUI
+  oof2engine
+  oof2image
+  oof2orientationmap
+  )
+
+# executable python scripts to install, after changing @PYEXEC@ to the
+# full path name of the desired python version.
+
+set(oofscripts
+  oof2
+  oof2-test
+  oof2-guitest
+  )
+
+#=--=##=--=##=--=##=--=##=--=##=--=##=--=##=--=##=--=##=--=##=--=##=--=#
 
 set(oof_build_types Debug Release)
 set(CMAKE_BUILD_TYPE Release)
@@ -28,28 +64,40 @@ set(BUILD_SHARED_LIBS ON)
 set(CMAKE_FIND_FRAMEWORK LAST)	# Prefers MacPorts over system python
 
 set(PythonVersions Python2 Python3)
-set(PythonVersion Python3 CACHE STRING "Which Python to use")
+set(PythonVersion Python2 CACHE STRING "Which Python to use")
 set_property(CACHE PythonVersion PROPERTY STRINGS ${PythonVersions})
 
+# Find Python. Set some variables so that the rest of the script
+# doesn't need to know if we're using Python2 or Python3, just to make
+# it easier while we're converting to Python3.
 ## TODO: Allow user to choose python sub version
-#find_package(Python3 3.9 COMPONENTS Interpreter Development)
 if(PythonVersion STREQUAL "Python2")
   message("looking for Python2")
   find_package(Python2 2.7 COMPONENTS Interpreter Development)
+  set(PYVERSION ${Python2_VERSION_MAJOR}.${Python2_VERSION_MINOR})
+  set(PYEXEC ${Python2_EXECUTABLE})
 endif()
+
 if(PythonVersion STREQUAL "Python3")
   message("looking for Python3")
   find_package(Python3 3.9 COMPONENTS Interpreter Development)
+  set(PYVERSION ${Python3_VERSION_MAJOR}.${Python3_VERSION_MINOR})
+  set(PYEXEC ${Python3_EXECUTABLE})
 endif()
 #message("PythonX is ${Python2_EXECUTABLE}")
 #message("PythonX_INCLUDE_DIRS is ${Python2_INCLUDE_DIRS}")
 #message("PythonX_LIBRARIES is ${Python2_LIBRARIES}")
+
+# Use a relative path so that DESTDIR mechanism works
+set(PYDEST lib/python${PYVERSION}/site-packages/${CMAKE_PROJECT_NAME})
 
 include(FindBLAS)
  
 #include(FindSWIG)
 #include(UseSWIG)
 #find_package(SWIG 4.0 COMPONENTS python)
+## UseSWIG can generate dependencies only for cmake >= 3.20 ? See
+## https://cmake.org/cmake/help/latest/release/3.20.html
 
 # Use pkg-config to get info about dependencies
 include(FindPkgConfig)
@@ -92,16 +140,16 @@ configure_file(
   @ONLY
   )
 
-set(ooflibs
-  oof2common
-  oof2commonGUI
-  oof2engine
-  oof2image
-  oof2orientationmap
+foreach(script ${oofscripts})
+  configure_file(
+  ${PROJECT_SOURCE_DIR}/${script}.in
+  ${PROJECT_BINARY_DIR}/${script}
+  @ONLY
   )
+endforeach()
 
-foreach(ooflib ${ooflibs})
-  target_include_directories(${ooflib}
+foreach(olib ${ooflibs})
+  target_include_directories(${olib}
     PUBLIC
     "${PROJECT_BINARY_DIR}"
     "${CMAKE_CURRENT_BINARY_DIR}"
@@ -114,7 +162,7 @@ foreach(ooflib ${ooflibs})
     "${MAGICK_INCLUDE_DIRS}"
     "${GTK3_INCLUDE_DIRS}"
     )
-  target_compile_options(${ooflib} PRIVATE -Wno-deprecated-register)
+  target_compile_options(${olib} PRIVATE -Wno-deprecated-register)
 endforeach()
 
 target_compile_options(oof2image PRIVATE ${MAGICK_CFLAGS} ${OOFCANVAS_CFLAGS})
@@ -162,6 +210,8 @@ target_link_libraries(oof2orientationmap
   
 add_subdirectory(SRC)
 
+# Install compiled libraries
+
 install(
   TARGETS
   oof2common
@@ -170,3 +220,96 @@ install(
   oof2image
   oof2orientationmap
   DESTINATION lib)
+
+# Install python files from SRC subdirectories, excluding SWIG output
+
+foreach(pydir ${oofdirs})
+  install(DIRECTORY SRC/${pydir}
+    DESTINATION ${PYDEST}/ooflib/
+    FILES_MATCHING
+    PATTERN "*.py"
+    PATTERN EXTRA EXCLUDE
+    PATTERN DIR.py EXCLUDE # TODO: delete this line after DIR.py files go away
+    )
+endforeach()
+
+# Install the top level __init__.py. I don't know if using
+# configure_file is the preferred way to do this, but it works.
+
+configure_file(
+  ${PROJECT_SOURCE_DIR}/SRC/__init__.py
+  ${PYDEST}/__init__.py
+  COPYONLY
+  )
+
+message("PYDEST is ${PYDEST}")
+configure_file(
+  ${PROJECT_SOURCE_DIR}/SRC/__init__.py
+  ${PYDEST}/ooflib/__init__.py
+  COPYONLY
+  )
+
+# Install the start up and test wrapper scripts
+
+install(
+  PROGRAMS
+  ${CMAKE_BINARY_DIR}/oof2
+  ${CMAKE_BINARY_DIR}/oof2-test
+  ${CMAKE_BINARY_DIR}/oof2-guitest
+  DESTINATION bin)
+
+# Install the TEST and GUITEST directories and their data
+
+install(
+  DIRECTORY TEST
+  DESTINATION ${PYDEST}
+  ## TODO: This will possibly install too much.  Use patterns or exclusions.
+  # FILES_MATCHING 
+  # PATTERN "*.py"
+  # PATTERN "*.dat"
+  )
+
+#=--=##=--=##=--=##=--=##=--=##=--=##=--=##=--=##=--=##=--=##=--=##=--=#
+
+# Compile and install the already swigged files in SRC/SWIG2D.  This
+# will change when we actually use call swig from cmake, but there's
+# no point in learning how to do that with swig1.1.
+
+set(swigsrcroot "${PROJECT_SOURCE_DIR}/SRC/SWIG2D")
+
+function(buildswiglibs)
+  # Get list of all python files in the current directory
+  file(GLOB swigpyfiles
+    LIST_DIRECTORIES false
+    CONFIGURE_DEPENDS
+    ${CMAKE_CURRENT_SOURCE_DIR} *.py)
+  foreach(pfile ${swigpyfiles})
+    get_filename_component(fname ${pfile} NAME_WE) # name w/out extension or dir
+    if(NOT (${fname} STREQUAL __init__))
+      #message("Building swig lib for ${fname}")
+      get_filename_component(dname ${pfile} DIRECTORY) # full directory path
+      set(libname ${fname}cmodule)
+      cmake_path(RELATIVE_PATH dname BASE_DIRECTORY ${swigsrcroot})
+      add_library(${libname} MODULE ${libname}.C)
+      # Delete the "lib" prefix, because swig 1.1 doesn't use it
+      set_target_properties(${libname} PROPERTIES PREFIX "")
+      target_link_libraries(${fname}cmodule PRIVATE ${ARGV})
+      target_compile_options(${fname}cmodule PRIVATE -Wno-deprecated-register)
+      install(TARGETS ${fname}cmodule
+	DESTINATION ${PYDEST}/ooflib/SWIG/${dname})
+    endif()
+
+  endforeach()
+endfunction()
+
+# TODO: The CMakeLists files in the SWIG2D subdirectories won't be
+# needed when we're using swig properly.
+add_subdirectory(SRC/SWIG2D)
+
+# Copy the python files from the SWIG2D directory
+install(
+  DIRECTORY SRC/SWIG2D/
+  DESTINATION ${PYDEST}/ooflib/SWIG
+  FILES_MATCHING PATTERN "*.py"
+  )
+
