--- a/SRC/engine/property/CMakeLists.txt
+++ b/SRC/engine/property/CMakeLists.txt
@@ -12,6 +12,7 @@ add_subdirectory(elasticity)
 add_subdirectory(forcedensity)
 add_subdirectory(heatcapacity)
 add_subdirectory(heatconductivity)
+add_subdirectory(interfaces)
 add_subdirectory(heatsource)
 add_subdirectory(massdensity)
 add_subdirectory(orientation)
