--- a/SRC/CMakeLists.txt
+++ b/SRC/CMakeLists.txt
@@ -10,3 +10,5 @@ add_subdirectory(common)
 add_subdirectory(engine)
 add_subdirectory(image)
 add_subdirectory(orientationmap)
+add_subdirectory(tutorials)
+add_subdirectory(EXTENSIONS)
