--- a/SRC/EXTENSIONS/diffusion/CMakeLists.txt
+++ b/SRC/EXTENSIONS/diffusion/CMakeLists.txt
@@ -1,11 +1,17 @@
-# -*- python -*-
-
 # This software was produced by NIST, an agency of the U.S. government,
 # and by statute is not subject to copyright in the United States.
 # Recipients of this software assume all responsibilities associated
 # with its operation, modification and maintenance. However, to
-# facilitate maintenance we ask that before distributing modified
+# facilitate maintenance we ask that before distributing modifed
 # versions of this software, you first contact the authors at
-# oof_manager@nist.gov. 
+# oof_manager@nist.gov.
 
-tet4init()
+target_sources(oof2engine
+  PRIVATE
+  diffusion.C
+  diffusion.h
+  charge.C
+  charge.h
+  ion.C
+  ion.h
+  )
