Trying to force files that include oofimage.h to compile with ImageMagick options.
I'm not sure that this is the right way to do it.  For reasons that
I don't understand, the problem is only appearing on the M1 Mac,
but it's inconvenient to edit there.

--- a/SRC/image/CMakeLists.txt
+++ b/SRC/image/CMakeLists.txt
@@ -19,4 +19,12 @@ target_sources(oof2image
   pixeldifferentiator.h
   )
 
+# Anything that links to oofimage.h has to be compiled with the
+# ImageMagick flags.
+set_source_files_properties(
+  oofimage.h
+  DIRECTORY ${PROJECT_SOURCE_DIR}
+  PROPERTIES
+  COMPILE_OPTIONS ${MAGICK_CFLAGS})
+
 add_subdirectory(IO)
