Use ImageMagick flasgs in more places when compiling swig output.

--- a/SRC/SWIG2D/image/CMakeLists.txt
+++ b/SRC/SWIG2D/image/CMakeLists.txt
@@ -1,6 +1,10 @@
 buildswiglibs(
+  CFLAGS
+  ${MAGICK_CFLAGS}
+  LIBS
   oof2common
   oof2image
+  ${MAGICK_LINK_LIBRARIES}
   ${${PythonVersion}_LIBRARIES}
   )
 
