Copied CMakeLists.txt files from the cmake-python2 branch, along with some associated minor changes.
git somehow thinks that it has renamed SRC/image/resampleimage.spy
to SRC/engine/property/heatconductivity/CMakeLists.txt which is not
what happened at all.  resampleimage.* has been removed and
CMakeLists.txt has been added.

--- a/SRC/EXTENSIONS/diffusion/CMakeLists.txt
+++ b/SRC/EXTENSIONS/diffusion/CMakeLists.txt
@@ -6,9 +6,12 @@
 # versions of this software, you first contact the authors at
 # oof_manager@nist.gov.
 
-add_subdirectory(common)
-add_subdirectory(engine)
-add_subdirectory(image)
-add_subdirectory(orientationmap)
-add_subdirectory(tutorials)
-add_subdirectory(EXTENSIONS)
+target_sources(oof2engine
+  PRIVATE
+  diffusion.C
+  diffusion.h
+  charge.C
+  charge.h
+  ion.C
+  ion.h
+  )
