--- a/SRC/engine/IO/CMakeLists.txt
+++ b/SRC/engine/IO/CMakeLists.txt
@@ -4,11 +4,12 @@
 # with its operation, modification and maintenance. However, to
 # facilitate maintenance we ask that before distributing modifed
 # versions of this software, you first contact the authors at
-# oof_manager@nist.gov.
+# oof_manager@nist.gov. add_subdirectory(GUI)
 
-add_subdirectory(common)
-add_subdirectory(engine)
-add_subdirectory(image)
-add_subdirectory(orientationmap)
-add_subdirectory(tutorials)
-add_subdirectory(EXTENSIONS)
+target_sources(oof2engine
+  PRIVATE
+  contour.C
+  contour.h
+  propertyoutput.C
+  propertyoutput.h
+  )
