--- a/SRC/image/IO/CMakeLists.txt
+++ b/SRC/image/IO/CMakeLists.txt
@@ -6,9 +6,4 @@
 # versions of this software, you first contact the authors at
 # oof_manager@nist.gov.
 
-add_subdirectory(common)
-add_subdirectory(engine)
-add_subdirectory(image)
-add_subdirectory(orientationmap)
-add_subdirectory(tutorials)
-add_subdirectory(EXTENSIONS)
+add_subdirectory(GUI)
