Don't run cmake on the already swigged files in the SWIG2D subdirectory.
This will be reinstated, differently, when we actually use swig.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -318,7 +318,7 @@ endfunction()
 
 # TODO: The CMakeLists files in the SWIG2D subdirectories won't be
 # needed when we're using swig properly.
-add_subdirectory(SRC/SWIG2D)
+##add_subdirectory(SRC/SWIG2D)
 
 # Copy the python files from the SWIG2D directory
 install(
