Added the cmake function for running swig, and told it to process one swig file from common.
It doesn't work yet, because oofcanvas has to be ported to python3
first, so I might as well switch the cmake effort to oofcanvas as
well.  It should be easy to copy files from OOF2.

--- a/SRC/common/CMakeLists.txt
+++ b/SRC/common/CMakeLists.txt
@@ -75,8 +75,6 @@ target_sources(oof2common
   smallmatrix.h
   statgroups.C
   statgroups.h
-  # swiglib.C
-  # swiglib.h
   switchboard.C
   switchboard.h
   threadstate.C
@@ -88,3 +86,9 @@ target_sources(oof2common
   trace.h
   )
 
+swig_sources(
+  SWIGFILES
+  argv
+  LIBRARIES
+  oof2common
+  )
