Created a wrapper file for swigruntime.h, oofswigruntime.h, which should be used instead.
swigruntime.h is generated by swig, and has the problem that it
doesn't contain anything to prevent it from being included more
than once.  It's also missing at least one #define that we use.
The wrapper file fixes these problems. It should be #included
instead.

--- a/SRC/common/CMakeLists.txt
+++ b/SRC/common/CMakeLists.txt
@@ -52,6 +52,7 @@ target_sources(oof2common
   ooferror.C
   ooferror.h
   oofomp.h
+  oofswigruntime.h
   pixelattribute.C
   pixelattribute.h
   pixelgroup.C
