Various minor fixes.
Commented out more modulename() functions. These were used by
the old pythonexportable.h.   I'm still not convinced that they're
unnecessary in the new version...

Fixed some typemap errors, and replaced calls to SWIG_exception_fail
with PyErr_SetString.  SWIG_exception_fail requires that we use
swig's exception categories, which may interfere with our own
exception handling methods.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,7 +81,7 @@ function(swig_sources)
       SOURCE ${swigfile}.swg
       PROPERTY INCLUDE_DIRECTORIES
       ${CMAKE_CURRENT_SOURCE_DIR}
-      ${PROJECT_SOURCE_DIR}/SRC/common
+      ${PROJECT_SOURCE_DIR}/SRC
       ${SS_INCLUDE_DIRECTORIES})
     # Set include directories for the compiler
     set_property(
@@ -164,7 +164,7 @@ set(CMAKE_FIND_FRAMEWORK LAST)	# Prefers MacPorts over system python
 
 # Find Python3.
 ## TODO: Allow user to choose python sub version
-find_package(Python3 3.9 EXACT COMPONENTS Interpreter Development)
+find_package(Python3 3.8 EXACT COMPONENTS Interpreter Development)
 set(PYVERSION ${Python3_VERSION_MAJOR}.${Python3_VERSION_MINOR})
 set(PYEXEC ${Python3_EXECUTABLE})
 
