Added more swig files to the build.

--- a/SRC/common/IO/GUI/CMakeLists.txt
+++ b/SRC/common/IO/GUI/CMakeLists.txt
@@ -1,3 +1,11 @@
+# This software was produced by NIST, an agency of the U.S. government,
+# and by statute is not subject to copyright in the United States.
+# Recipients of this software assume all responsibilities associated
+# with its operation, modification and maintenance. However, to
+# facilitate maintenance we ask that before distributing modifed
+# versions of this software, you first contact the authors at
+# oof_manager@nist.gov.
+
 target_sources(oof2commonGUI
   PRIVATE
   progressGUI.C
@@ -5,5 +13,13 @@ target_sources(oof2commonGUI
   rubberband.C
   rubberband.h
   gfxbrushstyle.C
-  gfxbrushstyle.h
-  )
+  gfxbrushstyle.h)
+
+swig_sources(
+  SWIGFILES
+  gfxbrushstyle
+  progressGUI
+  rubberband
+  LIBRARIES
+  oof2common
+  oof2commonGUI)
