--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -379,64 +379,6 @@ install(
   )
 
 
-# # Compile and install the already swigged files in SRC/SWIG2D.  This
-# # will change when we actually use call swig from cmake, but there's
-# # no point in learning how to do that with swig1.1.
-
-# set(swigsrcroot "${PROJECT_SOURCE_DIR}/SRC/SWIG2D")
-
-# function(buildswiglibs)
-#   set(multiValueArgs LIBS CFLAGS)
-#   cmake_parse_arguments(PARSE_ARGV 0 BSL "" "" "${multiValueArgs}")
-
-#   # If LIBS wasn't specified, then use the old calling sequence -- all
-#   # args are libs and none are cflags.
-#   if("${BSL_LIBS}" STREQUAL "")
-#     set(BSL_LIBS ${ARGV})
-#   endif()
-
-#   # Get list of all python files in the current directory
-#   file(GLOB swigpyfiles
-#     LIST_DIRECTORIES false
-#     CONFIGURE_DEPENDS
-#     ${CMAKE_CURRENT_SOURCE_DIR} *.py)
-  
-#   # Create build and link commands for the C++ wrappers
-#   foreach(pfile ${swigpyfiles})
-#     get_filename_component(fname ${pfile} NAME_WE) # name w/out extension or dir
-#     if(NOT (${fname} STREQUAL __init__))
-#       get_filename_component(dname ${pfile} DIRECTORY) # full directory path
-#       set(libname ${fname}cmodule)
-#       # Argh.  cmake_path requires 3.20.  Ubuntu 20.04 has 3.16.
-#       # Don't use cmake_path in the final version.
-#       cmake_path(RELATIVE_PATH dname BASE_DIRECTORY ${swigsrcroot})
-#       add_library(${libname} MODULE ${libname}.C)
-#       # Delete the "lib" prefix, because swig 1.1 doesn't use it
-#       set_target_properties(${libname} PROPERTIES PREFIX "")
-#       target_link_libraries(${fname}cmodule PRIVATE ${BSL_LIBS})
-#       target_compile_options(${fname}cmodule PRIVATE -Wno-deprecated-register)
-#       if( NOT ("${BSL_CFLAGS}" STREQUAL ""))
-# 	target_compile_options(${fname}cmodule PRIVATE ${BSL_CFLAGS})
-#       endif()
-
-#       install(TARGETS ${fname}cmodule
-# 	DESTINATION ${PYDEST}/ooflib/SWIG/${dname})
-#     endif()
-
-#   endforeach()
-# endfunction()
-
-# # TODO: The CMakeLists files in the SWIG2D subdirectories won't be
-# # needed when we're using swig properly.
-# ##add_subdirectory(SRC/SWIG2D)
-
-#=--=##=--=##=--=##=--=##=--=##=--=##=--=##=--=##=--=##=--=##=--=#
-
-
-# Copy the python files from the SWIG2D directory
-install(
-  DIRECTORY SRC/SWIG2D/
-  DESTINATION ${PYDEST}/ooflib/SWIG
-  FILES_MATCHING PATTERN "*.py"
-  )
-
+## TODO: When creating a distribution, check that the various
+## typemaps.swg files are included.  They're not explicitly listed as
+## source file elsewhere.
