Changed all %extern's to %import's.  Possibly some should be %include's.
%extern is obsolete.
Added "TODO PYTHON3" in spots where I wasn't sure what was correct.

--- a/SRC/common/IO/CMakeLists.txt
+++ b/SRC/common/IO/CMakeLists.txt
@@ -12,4 +12,10 @@ target_sources(oof2common
   bitoverlay.h
   )
 
+swig_sources(
+  SWIGFILES
+  bitoverlay
+  LIBRARIES
+  oof2common)
+
 add_subdirectory(GUI)
