A variety of fixes to the swig files.

--- a/SRC/common/CMakeLists.txt
+++ b/SRC/common/CMakeLists.txt
@@ -119,7 +119,7 @@ swig_sources(
   intarray
   latticesystem
   lock
-  mpitools
+  # mpitools  ## TODO: Add an mpi compilation option 
   ooferror
   pixelattribute
   pixelgroup
